# symmetrical-disco

./: .dockerignore  .gitignore  AI_USAGE.md  CLAUDE.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  interview_deep_dive.html  learning_guide_he.html  otel-collector-config.yaml  pyproject.toml
.github/workflows/: ci.yml
.superpowers/sdd/: task-8-report.md
alembic/: env.py
alembic/versions/: 0001_create_jobs.py  0002_add_scheduled_at_and_sync_flag.py  0003_add_priority.py  0004_add_attempts.py  0005_add_cancellation_batch_progress.py  0006_add_status_created_at_index.py  0007_add_trace_context.py  0008_add_users_and_job_ownership.py  0009_drop_users_tokenreview_auth.py
app/: cursor.py  idempotency.py  main.py  observability.py  repository.py  retry.py
app/api/: deps.py  middleware.py  ratelimit.py  routes.py
app/auth/: cache.py  identity.py  tokenreview.py
app/core/: config.py  db.py  healthcheck.py  logging.py  metrics.py  redis.py  telemetry.py
app/jobs/: handlers.py  registry.py
app/models/: job.py  user.py
app/queue/: consumer.py  delayed.py  producer.py
app/schemas/: api.py  enums.py  payloads.py  results.py
app/ticker/: __main__.py  runner.py
app/users/: keys.py  sync.py
app/worker/: __main__.py  context.py  recycler.py  runner.py  timeout.py
deploy/openshift/: bootstrap-cluster.sh  init-secrets.sh  setup-idp.sh
docs/: PRODUCTION-READINESS.md
docs/requirements/: 01-basic-flow.md  02-schedulaing.md  03-priority.md  04-failure-handling.md  05-cancellation.md  06-auth.md  07-opentelemetry.md  08-async-worker.md  09-deployment.md  10-api-security.md  leftovers.md
secrets/: api_user_keys.example.json
tests/: conftest.py
(+109 files in other folders)
