[project]
name = "assigment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.2",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0",
    "structlog>=26.1.0",
    "uvicorn[standard]>=0.49.0",
]

[dependency-groups]
dev = [
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
    "testcontainers>=4.14.2",
]
[tool.uv]
package = false
