[project]
name = "assigment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "fastapi>=0.138.2",
    "opentelemetry-exporter-otlp>=1.43.0",
    "opentelemetry-instrumentation-fastapi>=0.64b0",
    "opentelemetry-instrumentation-logging>=0.64b0",
    "opentelemetry-instrumentation-redis>=0.64b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.64b0",
    "opentelemetry-sdk>=1.43.0",
    "psutil>=7.2.2",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2",
    "pydantic-settings>=2.14.2",
    "redis>=8.0.1",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
    "fastapi-limiter==0.1.6",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.15.20",
    "testcontainers>=4.14.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.uv]
package = false
